2012-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* R/bdt.R: switch from fromDate() to setDate()

	* inst/include/RcppBDTdt.h: addMonth(), addYears() added which can't
	be done via date_duration as they need a date for context
	* src/RcppBDTdt.cpp: idem 

	* src/RcppBDTdd.cpp: added weeks()

2012-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdd.h: New class date_duration
	* src/RcppBDTdd.cpp: Implementation
	* R/zzz.R: Dispatching new methods for new class

2012-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdt.h: A few more methods for dates
	* src/RcppBDTdt.cpp: Idem
	* inst/include/RcppBDTdu.h: A few more methods for durations
	* src/RcppBDTdu.cpp: Idem
	* R/zzz.R: Dispatching to the new methods

2012-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdt.h: Altered several functions to use
	boost::gregorian::date more frequently as basic return type and rely
	on Rcpp::wrap() for conversion, rather than always directly converting
	* src/RcppBDTdt.cpp: Idem

	* src/RcppBDTdt.cpp: Comparison and (some) Arithmetic support for bdtDt type

	* man/bdtDu.Rd: Document new methods for Arithmetic and Comparison
	* man/bdtPt.Rd: Idem

2012-10-24  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/RcppBDTdu.h: using const bdtDu& instead of object<bdtDu>
	* inst/include/RcppBDTpt.h: using const bdtPt& instead of object<bdtPt>

2012-10-23  Romain Francois  <romain@r-enthusiasts.com>

	* src/RcppBDTdu.cpp: using bdtDu* instead of object<bdtDu> for function returns

2012-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdt.h:

	* src/RcppBDTpt.cpp: Comparison and arithmethic support for posix time
	* R/zzz.R: associated S4 methods

	* inst/include/RcppBDTdt.h: New file for declaration of time zone class
	* inst/include/RcppBDTpt.h: New file for declaration of posix time class
	* inst/include/RcppBDTdu.h: New file for declaration of duration class